Add different question types & prevent duplicates

--- a/docs/index.css
+++ b/docs/index.css
@@ -1,6 +1,5 @@
 html {
-    background-image: url(./images/dewbg.png);
-    background-repeat: repeat;
+    background-color: #8aca00 !important;
 }
 
 .logo {
