Test mobile optimization

--- a/docs/index.css
+++ b/docs/index.css
@@ -1,5 +1,11 @@
 html {
     background-color: #8aca00 !important;
+
+    position: absolute;
+    width: 100%;
+    min-height: 100vh;
+    height: 100vh;
+    top: 0;
 }
 
 .logo {
